2006-05-02  Reiner Steib  <Reiner.Steib@gmx.de>

	* startup.el (command-line-1): Refer to Lisp manual when
	pure-space-overflow occurs.

	* files.el (byte-compile-dynamic)
	(byte-compile-dynamic-docstrings, byte-compile-warnings)
	(find-file-visit-truename, indent-tabs-mode, left-margin)
	(no-byte-compile no-update-autoloads, truncate-lines)
	(version-control): Don't use `t' for safe-local-variable
	declarations.

2006-05-01  Richard Stallman  <rms@gnu.org>

	* diff-mode.el (diff-mode-shared-map): Don't bind M-W, M-U, M-C,
	M-r, M-R, M-A, M-SPC or M-DEL.
	(diff-mode-map): diff-refine-hunk now on C-c C-w
	(diff-mode-map): Bind C-c C-e, C-c C-n, C-c C-r, C-c C-u.

	* help-mode.el (help-mode): view-exit-action calls delete-window
	only when it is safe and possible.

	* simple.el (undo-outer-limit-truncate): Put quotes around buffer name
	in messages.

	* emacs-lisp/warnings.el (display-warning, lwarn): Doc fixes.

	* tool-bar.el (tool-bar-setup): Put Help and Preferences items
	in the default tool-bar-map.

2006-05-01  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-completion-file-name-handler-alist)
	(tramp-run-real-handler, tramp-completion-run-real-handler)
	(tramp-completion-handle-file-name-all-completions)
	(tramp-completion-handle-file-name-completion): Autoload them.
	(tramp-completion-handle-file-exists-p)
	(tramp-completion-handle-file-name-directory)
	(tramp-completion-handle-file-name-nondirectory)
	(tramp-completion-handle-expand-file-name): Remove them.
	(tramp-handle-file-name-directory): Return the real directory name.
	Returning "/" only doesn't need to be necessary any longer.
	(tramp-file-name-handler): Make special attention when in hostname
	completion mode.
	(tramp-completion-file-name-handler): Revert patch from	2006-04-28.
	(tramp-register-file-name-handlers): Register
	`tramp-completion-file-name-handler' only when
	`partial-completion-mode is enabled.
	(tramp-completion-handle-file-name-all-completions):